cchlib-core : 4.1.7 Fix log4j.properties Fix pom.xml Remove classes moved to cchlib-i18n, cchlib-sql, cchlib-core-deprecated Fix some tests cases Fix problems with small buffers in Base64Encoder
git-svn-id: https://cchlib.googlecode.com/svn/trunk@2678 bc589049-105d-1923-a3ce-6fcb24364ed1